# ReportForge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_installer.ps1
.github/workflows/: build-windows.yml
src/: main.cpp
src/core/: enums.h  observer.h
src/database/: db_manager.cpp  db_manager.h  finding_repository.cpp  finding_repository.h  project_repository.cpp  project_repository.h  repository.h  template_repository.cpp  template_repository.h  timeline_repository.cpp  timeline_repository.h
src/dialogs/: finding_dialog.cpp  finding_dialog.h  project_dialog.cpp  project_dialog.h  template_dialog.cpp  template_dialog.h
src/models/: evidence.h  finding.h  project.h  template.h  timeline.h
src/services/: cvss_calculator.cpp  cvss_calculator.h  import_export.cpp  import_export.h  pdf_generator.cpp  pdf_generator.h
src/utils/: file_utils.cpp  file_utils.h
src/widgets/: dashboard_view.cpp  dashboard_view.h  drag_drop_area.cpp  drag_drop_area.h  finding_detail_view.cpp  finding_detail_view.h  findings_view.cpp  findings_view.h  markdown_editor.cpp  markdown_editor.h  project_detail_view.cpp  project_detail_view.h  projects_view.cpp  projects_view.h  sidebar.cpp  sidebar.h  templates_view.cpp  templates_view.h
